feat(fondos): modulo de bolsas de ahorro con metas anuales
Implementa el modulo de Fondos de ahorro (bolsas) siguiendo el mismo
patron de UX/UI de Presupuestos, con tres principios clave:

## Modelo arquitectonico

- Aporte como GASTO real contra la cuenta activa (Modelo A):
  el saldo baja, refleja realidad economica. Estilo coherente con el
  sistema de transacciones existente.
- Una bolsa = una meta anual sin deadline. % calculado sobre
  aportado_total / monto_anual.
- Sin retiros en MVP: eliminar archiva (activo=false), preservando
  aportes historicos como transacciones reales.

## Diferenciacion visual con Presupuestos

- Color solido unico por bolsa (elegido al crear) en lugar de
  gradacion verde-rojo. Esto evita ambiguedad semantica:
  en presupuestos 60% lleno = advertencia (amarillo), en fondos
  60% = buen progreso. Patron Monzo/Nubank.
- Badge "Meta alcanzada" + glow dorado cuando aportado >= meta.

## Integracion

- Transaccion.fondo_id (FK opcional ON DELETE SET NULL)
- Hook en TransaccionService.actualizarRegistroFondo sincroniza
  RegistroFondo del mes al crear/eliminar aporte (mismo patron
  que PresupuestoPeriodo, sin proxies @Lazy)
- TransaccionController acepta param fondoId, fuerza tipo=GASTO,
  categoria automatica "Ahorro: [nombre]"
- Redirect whitelist incluye /fondos para mantener contexto
- Contexto dual estilo YNAB: aportado global + "Desde [cuenta]: $X"
- EntityGraph extendido a {cuenta, presupuesto, fondo} para evitar
  LazyInitializationException

## Migracion SQL v7 (idempotente, compatible MySQL 5.7+)

- fondo: color, descripcion, activo
- transaccion.fondo_id + FK fk_transaccion_fondo

## UI/UX

- Click directo en bolsa abre modal "Aportar a [bolsa]" con
  presupuesto pre-seleccionado, monto vacio con focus automatico
- Filtro dinamico por bolsa en historial de aportes
- Icono de corazon (simbolo de sidebar de fondos) en el historial
- Categorias sugeridas: Vacaciones, Vehiculo, Casa propia,
  Educacion, Emergencias, Inversiones, B